--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ body {
     </div>
 	<!-- section -->
 	 <div class="logo"  style="display: flex; justify-content: center; align-items: center; width:200px; height:100px;   margin: auto;">
-		<img width="300px"  src="Assets/llll-01.png" alt="">
+		<img width="300px"  src="llll-01.png" alt="">
 
 	 </div>
 
@@ -222,7 +222,7 @@ body {
 		<footer>
 			<div class="footer-content">
 				<div class="logo"  style="display: flex; justify-content: center; align-items: center; width:200px; height:100px; padding-top: 30px;   margin: auto;">
-					<img width="300px"  src="Assets/llll-01.png" alt="">
+					<img width="300px"  src="llll-01.png" alt="">
 			
 				 </div>
 
