--- a/OpeningDelivery.html
+++ b/OpeningDelivery.html
@@ -78,10 +78,10 @@
 
 
             <div class="menu">
-                <div class="logo-toggle">
-                    <span class="logo"><a href="#">CodingLab</a></span>
-					<i class="fas fa-times siderbarClose"></i>
-                </div>
+                	<div class="logo"  style="display: flex; justify-content: center; align-items: center; width:200px; height:100px; padding-top: 30px;   margin: auto;">
+					<img width="300px"  src="Assets/llll-01.png" alt="">
+			
+				 </div>
 
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
@@ -203,7 +203,10 @@
         <div  class="container">
             <footer>
                 <div class="footer-content">
-            <h1 style="font-family: 'Playwright NO', cursive; text-align: center;">LAHORI BADSHA</h1>
+           	<div class="logo"  style="display: flex; justify-content: center; align-items: center; width:200px; height:100px; padding-top: 30px;   margin: auto;">
+					<img width="300px"  src="Assets/llll-01.png" alt="">
+			
+				 </div>
     
                     <p>Lahori Badsha Restaurant offers a taste of authentic Pakistani cuisine at 142 Cheetham Hill Road, Manchester M8 8PZ. For reservations or inquiries, please call us at 01683 45656. Join us for an unforgettable dining experience! 4o Is this conversation helpful so far?</p>
             <p style="font-family: 'Playwright NO', cursive; text-align: center;">Open 7 Days From 12:00 pm to 11:00 pm</p>
