--- a/OpeningDelivery.html
+++ b/OpeningDelivery.html
@@ -79,7 +79,7 @@
 
             <div class="menu">
                 	<div class="logo"  style="display: flex; justify-content: center; align-items: center; width:200px; height:100px; padding-top: 30px;   margin: auto;">
-					<img width="300px"  src="Assets/llll-01.png" alt="">
+					<img width="300px"  src="llll-01.png" alt="">
 			
 				 </div>
 
@@ -203,7 +203,7 @@
             <footer>
                 <div class="footer-content">
            	<div class="logo"  style="display: flex; justify-content: center; align-items: center; width:200px; height:100px; padding-top: 30px;   margin: auto;">
-					<img width="300px"  src="Assets/llll-01.png" alt="">
+					<img width="300px"  src="llll-01.png" alt="">
 			
 				 </div>
     
