--- a/menu.html
+++ b/menu.html
@@ -480,7 +480,7 @@ body {
       <footer>
         <div class="footer-content">
           <div class="logo"  style="display: flex; justify-content: center; align-items: center; width:200px; height:100px; padding-top: 30px;   margin: auto;">
-            <img width="300px"  src="Assets/llll-01.png" alt="">
+            <img width="300px"  src="llll-01.png" alt="">
         
            </div>
   
