--- a/OpeningDelivery.html
+++ b/OpeningDelivery.html
@@ -66,10 +66,10 @@
         </div>
     </div>
 	<!-- section -->
-    <div class="logo"  style="display: flex; justify-content: center; align-items: center; width:200px; height:100px;   margin: auto;">
-		<img width="300px"  src="Assets/llll-01.png" alt="">
-
-	 </div>
+    	<div class="logo"  style="display: flex; justify-content: center; align-items: center; width:200px; height:100px; padding-top: 30px;   margin: auto;">
+					<img width="300px"  src="llll-01.png" alt="">
+			
+				 </div>
 
 
 	 <nav>
